--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   </tr>
 </table>
 <hr>
-  <a href="C:\Users\mayan\Desktop\Webdev-udemy\Hobbies.html">My hobbies</a>
-  <a href="C:\Users\mayan\Desktop\Webdev-udemy\contact.html">Contact me</a>
+  <a href="Hobbies.html">My hobbies</a>
+  <a href="contact.html">Contact me</a>
 </body>
 
 </html>
